embedded-6-branch/gcc/config/arm/arm.c
@@ -308,6 +308,8 @@ static section *arm_function_section (tree, enum node_frequency, bool, bool);
 static bool arm_asm_elf_flags_numeric (unsigned int flags, unsigned int *num);
 static unsigned int arm_elf_section_type_flags (tree decl, const char *name,
 						int reloc);
+static bool arm_use_blocks_for_constant_p (machine_mode var, const_rtx x);
+
 
 /* Table of machine attributes.  */
 static const struct attribute_spec arm_attribute_table[] =
@@ -756,6 +758,9 @@ static const struct attribute_spec arm_attribute_table[] =
 
 #undef TARGET_SECTION_TYPE_FLAGS
 #define TARGET_SECTION_TYPE_FLAGS arm_elf_section_type_flags
+
+#undef TARGET_USE_BLOCKS_FOR_CONSTANT_P
+#define TARGET_USE_BLOCKS_FOR_CONSTANT_P arm_use_blocks_for_constant_p
 
 struct gcc_target targetm = TARGET_INITIALIZER;
 
@@ -17356,10 +17361,6 @@ push_minipool_fix (rtx_insn *insn, HOST_WIDE_INT address, rtx *loc,
 int
 arm_max_const_double_inline_cost ()
 {
-  /* Let the value get synthesized to avoid the use of literal pools.  */
-  if (arm_disable_literal_pool)
-    return 99;
-
   return ((optimize_size || arm_ld_sched) ? 3 : 4);
 }
 
@@ -31603,5 +31604,16 @@ bool arm_coproc_ldc_stc_legitimate_address (rtx op)
 	gcc_unreachable ();
     }
   return false;
+}
+
+/* Implements the TARGET_USE_BLOCKS_FOR_CONSTANT_P hook.
+
+   If we have disabled the generation of constants inside a literal pool, then
+   this function returns false.  Otherwise, return true.  */
+
+static bool
+arm_use_blocks_for_constant_p (machine_mode /* var */, const_rtx /* x */)
+{
+  return !arm_disable_literal_pool;
 }
 #include "gt-arm.h"
